Refactor Stop management by adding Stop model and repository methods, and introduce Neighborhood entity and mapper for improved data handling